# flight-tracker-cli

./: .gitignore  README.md  pyproject.toml
flight_tracker_cli/: __init__.py  __main__.py  aircraft.py  auth.py  overhead.py
skill/: SKILL.md
tests/: test_aircraft.py  test_overhead.py
