[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-tracker-cli"
version = "0.1.0"
description = "A CLI tool for tracking flights using the OpenSky Network API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
]

[project.scripts]
flight-tracker = "flight_tracker_cli.__main__:cli"
